# KYLE

./: .env  .gitignore  AGENTS.md  BENCHMARK.md  Cargo.toml  EXECUTION-PLAN.md  LICENSE  README.md  RELEASE.md  ROADMAP.md  SELF-HOSTING.md  TEST_CHECKLIST.md  TYPES.md  core  install.ps1  install.sh  kl.toml  ky.toml  rust_out  test_all_examples.sh  uninstall.sh  xd.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.klc-build/: hello
app-code/: kl.toml
app-code/src/: ejemplo_import.kl  main.kl  test_alias.kl  test_from_import.kl  test_from_simple.kl  test_import_subdir.kl  test_relative.kl  test_visibility.kl  utils.kl
benchmarks/: .gitignore  run.sh  run_bench  run_bench.go  run_benchmarks.sh
benchmarks/concat/: concat.c  concat.cpp  concat.cs  concat.go  concat.java  concat.ky  concat.py  concat.rs  concat_cpp  concat_go
benchmarks/fib/: fib.c  fib.cs  fib.csproj  fib.go  fib.java  fib.ky  fib.py  fib.rs  fib_cpp  fib_go
benchmarks/matmul/: matmul.c  matmul.cpp  matmul.cs  matmul.go  matmul.java  matmul.ky  matmul.py  matmul.rs  matmul_c  matmul_cpp  matmul_cs  matmul_go  matmul_rs
benchmarks/primes/: pcs  primes.c  primes.cpp  primes.cs  primes.go  primes.java  primes.ky  primes.py  primes.rs  primes_cpp  primes_go
crates/klc_backend/: Cargo.toml
crates/klc_cli/: Cargo.toml
crates/klc_cli/src/: main.rs
crates/klc_core/: Cargo.toml
crates/klc_driver/: Cargo.toml
crates/klc_driver/src/: build.rs  config.rs  lib.rs  pipeline.rs
crates/klc_frontend/: Cargo.toml
crates/klc_hir/: Cargo.toml
crates/klc_mir/: Cargo.toml
crates/klc_runtime/: Cargo.toml
crates/klc_semantic/: Cargo.toml
crates/klc_tools/: Cargo.toml
crates/klc_tools/src/: completion.rs  formatter.rs  lib.rs  lsp.rs
crates/klc_tools/src/package/: cache.rs  lock.rs  manifest.rs  mod.rs  project.rs  registry.rs
crates/kyc_backend/: Cargo.toml
crates/kyc_cli/: Cargo.toml
crates/kyc_cli/src/: main.rs
crates/kyc_core/: Cargo.toml
crates/kyc_driver/: Cargo.toml
crates/kyc_driver/src/: build.rs  config.rs  lib.rs  pipeline.rs
crates/kyc_driver/src/pipeline/: mod.rs
crates/kyc_frontend/: Cargo.toml
crates/kyc_hir/: Cargo.toml
crates/kyc_mir/: Cargo.toml
crates/kyc_platform/: Cargo.toml
crates/kyc_runtime/: Cargo.toml
crates/kyc_runtime/src/: assert.rs  async_.rs  big_int.rs  bytes.rs  channel.rs  crypto.rs  date.rs  datetime.rs  decimal.rs  dict.rs  duration.rs  io.rs  lib.rs  list.rs  memory.rs  net.rs  panic.rs  path_.rs  platform.rs  queue.rs  regex.rs  set.rs  stack.rs  string.ky  string.rs  sync.rs  thread.rs  url.rs  uuid.rs
crates/kyc_runtime_wasm/: Cargo.toml
crates/kyc_semantic/: Cargo.toml
crates/kyc_tools/: Cargo.toml
crates/kyc_tools/src/: completion.rs  formatter.rs  lib.rs  lsp.rs
crates/kyc_tools/src/package/: cache.rs  lock.rs  manifest.rs  project.rs  registry.rs
crates/kyc_ui/: Cargo.toml
docs/: 00-vision.md  01-language-reference.md  01-language-specification.md  02-formal-grammar.md  02-types-errors-memory.md  03-ast-specification.md  03-modules-packages-tooling.md  04-compiler-architecture.md  04-type-system.md  05-error-system.md  05-roadmap-status.md  06-module-system.md  06-stdlib.md  07-migration-guide.md  07-standard-library.md  08-async-runtime.md  08-http-client.md  09-memory-model.md  09-sqlite.md  10-compiler-architecture.md  10-postgresql.md  11-frontend-web.md  11-project-architecture.md  12-package-manager.md  12-platform-architecture.md  13-freestanding-mode.md  13-roadmap.md  14-error-catalog.md  14-self-hosting.md  15-abi-specification.md  15-kyle-syntax-reference.md  15-ssa-optimization-plan.md  16-status.md  17-syntax-reference.md  18-getting-started.md  19-distribution.md  README.md
docs/01-introduction/: README.md  architecture.md  faq.md  philosophy.md  principles.md  roadmap.md  vision.md
docs/01-overview/: architecture.md  principles.md
docs/02-getting-started/: README.md  build.md  debugging.md  first-program.md  ide.md  installation.md  package-manager.md  performance.md  project-layout.md  testing.md
docs/02-guide/: debugging.md  patterns.md  performance.md  testing.md
docs/03-language/: README.md
docs/03-language-reference/: README.md  classes.md  concurrency.md  enums.md  error-handling.md  functions.md  generics.md  lexical-structure.md  modules.md  ownership.md  statements.md  types.md  variables.md
docs/04-platform/: README.md
docs/04-standard-library/: README.md  collections.md  core.md  crypto.md  database.md  fs.md  http.md  io.md  json.md  math.md  net.md  path.md  process.md  random.md  regex.md  serialization.md  strings.md  sync.md  testing.md  thread.md  time.md  xml.md
docs/05-packages/: README.md  (+5 more)
docs2/: README.md
examples/: async_test  async_test.kl  char_test  char_test.kl  class_greet_test.kl  class_method_test  class_method_test.kl  closure_test  closure_test.kl  closure_test2  closure_test2.kl  closure_test3.kl  completion_test.kl  const_fn_test.kl  crud_server.ky  debug_lexer  debug_lexer.kl  defer_test  defer_test.kl  dict_test  dict_test.kl  enum_only  enum_only.kl  enum_test  enum_test.kl  enum_test2  enum_test2.kl  error_test  error_test.kl  fibonacci  fibonacci.kl  for_test  for_test.kl  for_test2  for_test2.kl  generic_fn  generic_fn.kl  generic_struct  generic_struct.kl  guard_test  (+76 more)
finaltest/: .gitignore  kl.toml
runtime/: strlen.ky
scripts/: benchmark.sh  build-release.sh  fib_bench.ky  generate-registry-json.sh  install.ps1  install.sh
std/: collections.kl  core.kl  io.kl  io.ky  json.kl  json.ky  math.kl  math.ky  str.kl  testing.kl  time.kl
tests/: SYNTAX_CHECKLIST.md  caret_on_borrow_param_error.ky  immutable_param_cannot_assign.ky  move_param_requires_caret.ky  move_param_with_caret_ok.ky  mutable_param_can_assign.ky  syntax_comprehensive.ky
vscode-kl/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  install-extension.sh  language-configuration.json  package.json  tsconfig.json
vscode-ky/: .vscodeignore  CHANGELOG.md  README.md  install-extension.ps1  install-extension.sh  language-configuration.json  package.json
(+443 files in other folders)
