[workspace]
resolver = "2"
members = [
    "crates/kyc_core",
    "crates/kyc_frontend",
    "crates/kyc_hir",
    "crates/kyc_semantic",
    "crates/kyc_mir",
    "crates/kyc_backend",
    "crates/kyc_driver",
    "crates/kyc_cli",
    "crates/kyc_runtime",
    "crates/kyc_tools",
]

[workspace.package]
version = "0.5.0"
edition = "2024"
authors = ["Kynera"]
license = "MIT"

[workspace.dependencies]
# LLVM bindings — enabled when Phase 3 begins
# inkwell = { version = "0.11", features = ["llvm22-0"] }
# llvm-sys = "220"
