[package]
name = "klc_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "klc"
path = "src/main.rs"

[[bin]]
name = "kl"
path = "src/main.rs"

[dependencies]
klc_driver = { path = "../klc_driver" }
klc_tools = { path = "../klc_tools" }
clap = "4"
