[package]
name = "klc_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "kl"
path = "src/main.rs"

[dependencies]
klc_core = { path = "../klc_core" }
klc_driver = { path = "../klc_driver" }
klc_tools = { path = "../klc_tools" }
ureq = { version = "3", features = ["json"] }
flate2 = "1"
tar = "0.4"

