[package]
name = "klc_tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
klc_core = { path = "../klc_core" }
klc_frontend = { path = "../klc_frontend" }
klc_semantic = { path = "../klc_semantic" }
lsp-server = "0.7"
lsp-types = "0.95"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
semver = "1"
