[package]
name = "kyc_tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
kyc_core = { path = "../kyc_core" }
kyc_frontend = { path = "../kyc_frontend" }
kyc_semantic = { path = "../kyc_semantic" }
lsp-server = "0.7"
lsp-types = "0.95"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
semver = "1"
ureq = { version = "3", features = ["json"] }
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
